--- a/index.html
+++ b/index.html
@@ -7,5 +7,6 @@
     <body>
         <h1>はじめてのバージョン管理</h1>
         <p>Gitを使ってバージョン管理する。</p>
+        <img src="https://techacademy.s3.amazonaws.com/training/github/basic/git-logo.png" alt="git logo">
     </body>
 </html>
