--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
         <p>Gitを使ってバージョン管理する。</p>
         <p>リポジトリの初期化からはじめていきます。</p>
         <p>初期化は<i>git init</i>コマンドを使用して行います。</p>
-        <img src="https://techacademy.s3.amazonaws.com/training/github/basic/git-logo.png" alt="git logo">
+	<p>ファイルを変更してステージしましょう。</p>
+	<img src="https://techacademy.s3.amazonaws.com/training/github/basic/git-logo.png" alt="git logo">
     </body>
 </html>
